# haskell-tutorials

./: 02-Lists.md  03-EquationalReasoning.md  04-ADTs.md  05-MoreTypes.md  05-Typeclasses.md  06-CommonTypeclasses.md  07-SimpleParser.md  08-Monads.md  Functions.md  Introduction.md  LICENSE  Lists.md  README.md
slides/: 01-basics.md  02-data-types.md  03-type-classes.md  remark-template.html  show.sh
src/job-scheduling/: README.md  job-scheduling.cabal  stack.yaml
src/job-scheduling/src/: Main.hs  Scheduler.hs  Simulator.hs  Types.hs
src/nano-lang/: README.md  nano-lang.cabal  program.nano  stack.yaml
src/nano-lang/src/: Main.hs
src/nano-lang/src/Nano/: Evaluator.hs  Parser.hs  Types.hs
src/nano-lang/src/ParserLib/: SimpleParser.hs
src/parsing/: SimpleParser.hs  program.nano
tutorials/: 01-Functions.md  03-EquationalReasoning.md  05-MoreTypes.md
