name:                job-scheduling
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable job-scheduling
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Scheduler
               , Simulator
               , Types

  build-depends: base
               , containers
               , heap
               , pretty-show
               , random
               , semigroups

